Worked on implementation of collector device.     Implemented:         - Transport protocol facade         - Partial implementation of ConnectionManager         - Sender module         - Mock implementation of range_forwarder     TODO:         - State machine implementation of ConnectionManager         - Real implementation of range_forwarder

--- a/platformio.ini
+++ b/platformio.ini
@@ -31,7 +31,7 @@ sensor2_port = /dev/ttyACM2
 upload_port = ${ports.collector_port}
 monitor_port = ${ports.collector_port}
 build_flags = ${env.build_flags} -DCOLLECTOR
-build_src_filter = ${env.src_filter}
+build_src_filter = ${env.src_filter} -<sensor/*>
 lib_deps = 
 	sandeepmistry/LoRa@^0.8
 
@@ -39,7 +39,7 @@ lib_deps =
 upload_port = ${ports.sensor1_port}
 monitor_port = ${ports.sensor1_port}
 build_flags = ${env.build_flags} -DSENSOR1
-build_src_filter = ${env.src_filter}
+build_src_filter = ${env.src_filter} -<collector/*>
 lib_deps = 
 	sandeepmistry/LoRa@^0.8
 
@@ -47,5 +47,6 @@ lib_deps =
 upload_port = ${ports.sensor2_port}
 monitor_port = ${ports.sensor2_port}
 build_flags = ${env.build_flags} -DSENSOR2
+build_src_filter = ${env.src_filter} -<collector/*>
 lib_deps = 
 	sandeepmistry/LoRa@^0.8
