--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = atmelsam
 board = mkrwan1310
 framework = arduino
-build_flags = -Iinclude -std=gnu++14
+build_flags = -std=gnu++14 -Wall
 build_unflags = -std=gnu++11
 extra_scripts = pre:.compiledb.py
 monitor_echo = yes
@@ -30,23 +30,46 @@ sensor2_port = /dev/ttyACM2
 [env:collector]
 upload_port = ${ports.collector_port}
 monitor_port = ${ports.collector_port}
-build_flags = ${env.build_flags} -DCOLLECTOR
 build_src_filter = ${env.src_filter} -<sensor/*>
+build_flags = ${env.build_flags} -DCOLLECTOR 
+build_unflags = -std=gnu++11
 lib_deps = 
 	sandeepmistry/LoRa@^0.8
+
+monitor_echo = yes
+monitor_eol = LF
+monitor_speed = 115200
+monitor_filters = 
+	log2file
+	time
 
 [env:sensor1]
 upload_port = ${ports.sensor1_port}
 monitor_port = ${ports.sensor1_port}
-build_flags = ${env.build_flags} -DSENSOR1
 build_src_filter = ${env.src_filter} -<collector/*>
+build_flags = ${env.build_flags} -DSENSOR1 
 lib_deps = 
 	sandeepmistry/LoRa@^0.8
+
+monitor_echo = yes
+monitor_eol = LF
+monitor_speed = 115200
+monitor_filters = 
+	log2file
+	time
 
 [env:sensor2]
 upload_port = ${ports.sensor2_port}
 monitor_port = ${ports.sensor2_port}
 build_flags = ${env.build_flags} -DSENSOR2
+build_unflags = -std=gnu++11
 build_src_filter = ${env.src_filter} -<collector/*>
 lib_deps = 
 	sandeepmistry/LoRa@^0.8
+
+monitor_echo = yes
+monitor_eol = LF
+monitor_speed = 115200
+monitor_filters = 
+	log2file
+	time
