Fixed issue when receiving wrong message type not removing that message from message buffer (Collector)

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = atmelsam
 board = mkrwan1310
 framework = arduino
-build_flags = -std=gnu++14 -Wall
+build_flags = -std=gnu++14 -Wall -Iinclude
 build_unflags = -std=gnu++11
 extra_scripts = pre:.compiledb.py
 monitor_echo = yes
