--- a/measurement-recollection/platformio.ini
+++ b/measurement-recollection/platformio.ini
@@ -31,7 +31,7 @@ sensor2_port = /dev/ttyACM2
 upload_port = ${ports.collector_port}
 monitor_port = ${ports.collector_port}
 build_src_filter = ${env.src_filter} -<sensor/*>
-build_flags = ${env.build_flags} -DCOLLECTOR 
+build_flags = ${env.build_flags} -DCOLLECTOR -DLOGGER_DISABLE
 build_unflags = -std=gnu++11
 lib_deps = 
 	sandeepmistry/LoRa@^0.8
